# qtcalendar

./: .gitignore  pyproject.toml  qtcalendar.py
qtcalendarlib/ui/: MainWindow.py  MainWindow.ui
