[tool.poetry]
name = "qtcalendar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "LGPL"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
QtPy = "^1.11.2"
PySide2 = "^5.15.2"

[tool.poetry.dev-dependencies]
PyQt5Designer = "^5.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
